package edu.hitsz.prop;

public class Blood extends AbstractProp {

//    private int health = 20;

    public Blood(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

//    public int getHealth() {
//        return health;
//    }
}

